--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <nav>
+      <ul class="nav">
+        <li class="nav-list">
+          <a href="./1-timer.html">Timer</a>
+        </li>
+        <li class="nav-list">
+          <a href="./2-snackbar.html">Snackbar</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
